# nudge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  ROADMAP.md
.claude/: settings.local.json
.github/workflows/: auto-tag.yml  ci.yml  quick-check.yml  release.yml
config/: config.default.yaml.template  config.user.yaml.template  config.yaml.template
docs/: RELEASE_NOTES_v0.3.0.md  auto-mode.md  cli-reference.md  configuration.md  ffi-api.md  installation.md  migration-guide.md  troubleshooting.md
docs/en/: auto-mode.md  cli-reference.md  configuration.md  ffi-api.md  installation.md  roadmap.md
docs/en/shells/: README.md  bash.md  cmd.md  powershell.md  zsh.md
docs/plans/: 2026-01-22-cross-platform-auto-mode-design.md  2026-01-22-phase1-foundation-refactoring.md  2026-01-29-project-aware-plugins-design.md  2026-01-30-diagnose-context-enhancement-design.md  2026-01-30-error-diagnosis-design.md  2026-01-30-error-diagnosis-implementation.md  2026-02-04-suggestion-cache-design.md  2026-02-04-suggestion-cache-implementation-plan.md  2026-02-05-auto-mode-widget-refactor.md  2026-02-06-zsh-flagship-l3-implementation.md
docs/shells/: README.md  bash.md  cmd.md  powershell.md  prompt-and-ux-improvements.md  zsh.md
docs/zh/: auto-mode.md  cli-reference.md  configuration.md  ffi-api.md  installation.md  roadmap.md
docs/zh/shells/: README.md  bash.md  cmd.md  powershell.md  zsh.md
include/: nudge.h
scripts/: install.ps1  install.sh
shell/: install.ps1  install.sh  integration.bash  integration.cmd  integration.ps1  integration.zsh  setup-shell.ps1  setup-shell.sh  uninstall.sh
shell/NudgePredictor/: NudgePredictor.psd1  NudgePredictor.psm1
src/: cli.rs  config.rs  lib.rs  main.rs  paths.rs  protocol.rs
src/client/: diagnosis.rs  ipc.rs  mod.rs
src/commands/: context.rs  doctor.rs  info.rs  mod.rs  setup.rs
src/daemon/: diagnosis.rs  llm.rs  mod.rs  safety.rs  sanitizer.rs  server.rs  session.rs  shell_mode.rs  suggestion_cache.rs
src/daemon/context/: cwd.rs  history.rs  mod.rs  plugin.rs  system.rs
src/daemon/plugins/: git.rs  mod.rs
src/daemon/plugins/builtin/: git.rs  mod.rs  node.rs  python.rs  rust_lang.rs
src/daemon/plugins/community/: docker.rs  mod.rs
src/daemon/prompts/: README.md  completion.rs
src/daemon/prompts/templates/completion/: system.md
src/daemon/prompts/templates/completion/contracts/: bash-popup.md  inline.md  zsh.md
src/ffi/: auto_mode.rs  completion.rs  context.rs  error.rs  mod.rs  types.rs
tests/: auto_mode_test.rs  bash_integration_test.rs  completion_test.rs  ffi_test.rs  git_plugin_test.rs  node_plugin_test.rs  powershell_integration_test.ps1  python_plugin_test.rs  rust_plugin_test.rs  sanitizer_test.rs  zsh_integration_test.rs
tests/fixtures/: bash_history  sensitive_commands.txt  zsh_history  zsh_history_simple
tests/integration/: completion_test.rs  git_plugin_test.rs
